syntax = "proto3";
package validation;

import "github.com/edstell/lambda/tools/protoc-gen-service/proto/validation/validation.proto";

option go_package = "github.com/edstell/lambda/libraries/validation;validation";

message String {
    string field = 1 [(validation.required) = true];
}

message Map {
    map<string,string> field = 1 [(validation.required) = true];
}

message List {
    repeated string field = 1 [(validation.required) = true];
}

message Bytes {
    bytes field = 1 [(validation.required) = true];
}

message Message {
    String field = 1 [(validation.required) = true];
}

message OneOf {
    oneof field {
        string value = 1;
        option (validation.at_least_one) = true;
    }
}

message MapMessage {
    map<string,Message> map = 1;
}

message ListMessage {
    repeated Message list = 1;
}

message MessageMessage {
    Message msg = 1; 
}
